@@ -52,11 +52,13 @@ public class TraversalPredicateVisitorTest {
                 {"outside(1E11, 2e-11)", P.outside(new BigDecimal("1E11"), new BigDecimal("2e-11"))},
                 {"between(\"a\", \"e\")", P.between("a", "e")},
                 {"within([\"a\", \"e\"])", P.within(Arrays.asList("a", "e"))},
+                {"within()", P.within()},
                 {"without([1, 2])", P.without(Arrays.asList(1, 2))},
                 {"without([1, 2])", P.without(1, 2)},
                 {"without(1, 2)", P.without(1, 2)},
                 {"without(1)", P.without(1)},
                 {"without([1])", P.without(1)},
+                {"without()", P.without()},
                 {"without(1, [1, 2])", P.without(1, Arrays.asList(1, 2))},
                 {"within([1, 2, 3], 1, [1, 2])", P.within(Arrays.asList(1, 2, 3), 1, Arrays.asList(1, 2))},
                 {"not(without(1, 2))", P.not(P.without(1, 2))},
@@ -74,6 +76,8 @@ public class TraversalPredicateVisitorTest {
                 {"P.outside(1E11, 2e-11)", P.outside(new BigDecimal("1E11"), new BigDecimal("2e-11"))},
                 {"P.between(\"a\", \"e\")", P.between("a", "e")},
                 {"P.within([\"a\", \"e\"])", P.within(Arrays.asList("a", "e"))},
+                {"P.within()", P.within()},
+                {"P.without()", P.without()},
                 {"P.without([1, 2])", P.without(Arrays.asList(1, 2))},
                 {"P.not(P.without(1, 2))", P.not(P.without(1, 2))},
                 {"P.not(P.eq(10))", P.not(P.eq(10))},
