@@ -38,6 +38,7 @@ image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/ima
 * Allowed `null` values in `Memory` for `GraphComputer`.
 * Allowed `null` assignment in `withSideEffect()`.
 * Allowed labelling of steps that emit a traverser carrying `null`.
+* Modified grammar to allow a call to `within()` and `without()` with no arguments.
 * Fixed problems with `inject(null)` variations where `null` was the only value being submitted.
 * Fixed problem with `GroovyTranslator` and `inject(null,null)` which could be interpreted as the Groovy JDK extension `inject(Object,Closure).
 * Fixed error where certain variants of `inject()` with `null` might not properly construct a traversal in .NET.
